# quazip

./: CMakeLists.txt  conanfile.py
cmake/: quazip-config.cmake.in
quazip/: CMakeLists.txt  quazip.rc.in
test_package/: CMakeLists.txt  conanfile.py  example.cpp
